put back vertical align on parent to fix absolute alignment

--- a/app/assets/stylesheets/new_styles/_base.scss
+++ b/app/assets/stylesheets/new_styles/_base.scss
@@ -73,6 +73,7 @@ a { color : $link-blue  }
 
   #info_row {
     display : table-cell;
+    vertical-align : middle;
     text-align : center;
     padding : 20px 0;
   }
